Code refactoring of hawkbit-ddi-api
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>